fixed footer overlap

--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -132,9 +132,9 @@
   justify-content: center;
   align-content: flex-start;
   min-width: 90%;
-  margin-left: 32px;
-  margin-right: 32px;
+  margin: 0 32px 64px 32px;
   padding: 15px;
+  padding-bottom: 32px;
   background-color: var(--green);
   border-radius: 4px;
   border: 1px rgb(13, 13, 13) solid;
